# bytify-rs

./: Cargo.toml  README.md
bytify-impl/: Cargo.toml
bytify-impl/src/: lib.rs
src/: lib.rs
tests/: lib.rs
