[package]
name = "bytify"
description = "Convenience macro for generating continuous byte arrays from arbitrary sequences of literals."
edition = "2021"
version = "0.4.0"
authors = ["Eugene Palmoff <mahou@shoujo.pw>"]
license = "MIT"
repository = "https://github.com/mahou-shoujo/bytify-rs.git"
homepage = "https://github.com/mahou-shoujo/bytify-rs.git"
readme = "README.md"
categories = ["development-tools::procedural-macro-helpers", "encoding"]
keywords = ["bytification", "literals", "hex", "proc-macro"]

[dependencies]
typewit = "1"
