[package]
name = "bytify-impl"
description = "Internal implementation of the bytify crate."
version = "0.0.1"
authors = ["Eugene <mahou@shoujo.pw>"]
license = "MIT"
repository = "https://github.com/mahou-shoujo/bytify-rs.git"
homepage = "https://github.com/mahou-shoujo/bytify-rs.git"
categories = ["development-tools::procedural-macro-helpers", "encoding"]
keywords = ["bytification", "literals", "hex", "proc-macro"]

[lib]
proc-macro = true

[dependencies]
byteorder = "~1.2"
quote = "~0.4"
syn = { version = "~0.12", features = ["full", "extra-traits"] }
failure = "~0.1"
proc-macro-hack = "~0.4"

[features]
default = []
default-big-endian = []
